pytbak/01-ns-pytbak.yaml
kind: "Namespace"
apiVersion: "v1"
metadata:
  name: "pytbak"
  labels:
    name: "pytbak"
