pytbak/04-dpl-pytbak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pytbak
    track: pytbak-stable
  name: pytbak-stable
  namespace: pytbak
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: pytbak
      track: pytbak-stable
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pytbak
        track: pytbak-stable
    spec:
      containers:
      - name: pytbak
        image: lgirardi/py-test-backend
        resources:
          limits:
            cpu: 300m
            memory: 250Mi
          requests:
            cpu: 30m
            memory: 125Mi
        ports:
        - name: http
          containerPort: 5000
