pytbak/02-svc-pytbak.yaml
apiVersion: v1
kind: Service
metadata:
  name: pytbak-svc
  namespace: pytbak
  labels:
    app: pytbak
  annotations:
    konghq.com/plugins: pytbak-key-auth
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    app: pytbak
